# ChangeLog for net-dns/c-ares
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/c-ares/ChangeLog,v 1.45 2008/09/18 08:12:32 pva Exp $

*c-ares-1.5.3 (18 Sep 2008)

  18 Sep 2008; Peter Volkov <pva@gentoo.org> +c-ares-1.5.3.ebuild:
  Version bump.

*c-ares-1.5.2 (01 Jun 2008)

  01 Jun 2008; Daniel Black <dragonheart@gentoo.org> +c-ares-1.5.2.ebuild:
  version bump

*c-ares-1.5.1 (01 Apr 2008)

  01 Apr 2008; Daniel Black <dragonheart@gentoo.org> +c-ares-1.5.1.ebuild:
  version bump

  06 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> c-ares-1.4.0.ebuild:
  Adding back ~x86-fbsd for games-action/bzflag. Someone dropped the KEYWORD
  without a ChangeLog, so I am assuming that it was by accident.

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> c-ares-1.4.0.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  06 Aug 2007; Daniel Black <dragonheart@gentoo.org> -c-ares-1.3.0.ebuild,
  -c-ares-1.3.1.ebuild, -c-ares-1.3.2.ebuild:
  cleanout

  11 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> c-ares-1.4.0.ebuild:
  Stable on sparc wrt security #181373

  10 Jun 2007; Joshua Kinard <kumba@gentoo.org> c-ares-1.4.0.ebuild:
  Stable on mips, per #140068.

  09 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> c-ares-1.4.0.ebuild:
  ppc stable, bug #181373

  09 Jun 2007; Jeroen Roovers <jer@gentoo.org> c-ares-1.4.0.ebuild:
  Stable for HPPA (bug #140068).

  09 Jun 2007; Raúl Porcel <armin76@gentoo.org> c-ares-1.4.0.ebuild:
  alpha/ia64/x86 stable wrt security #181373

  09 Jun 2007; Christoph Mende <angelos@gentoo.org> c-ares-1.4.0.ebuild:
  Stable on amd64 wrt security bug 181373

  09 Jun 2007; Markus Rothe <corsair@gentoo.org> c-ares-1.4.0.ebuild:
  Stable on ppc64; bug #181373

*c-ares-1.4.0 (09 Jun 2007)

  09 Jun 2007; Daniel Black <dragonheart@gentoo.org> -c-ares-1.2.0.ebuild,
  -c-ares-1.2.1-r1.ebuild, +c-ares-1.4.0.ebuild:
  version bump and cleanout
