@@ -3,9 +3,11 @@ DIST c-ares-1.4.0.tar.gz 431082 RMD160 06d52e3a36579baf8f6244f927683b43e42fad81 
 DIST c-ares-1.5.1.tar.gz 445312 RMD160 0c16aa1f8ba498f9f04bbb44825c4b5b9d424726 SHA1 f372187931789c572d134e6362eaf39f44d4dbc1 SHA256 e80e34160f99678954ca37385fea19859369760a0a00d039cc952b9a6602f79f
 DIST c-ares-1.5.2.tar.gz 472603 RMD160 3a34e4ed59fbc6931e4c40ef1de277c140b1a42d SHA1 67a64ca1eab60dabfd462b833216ada3a0de7ffa SHA256 41f2df62e8f267cfd0ea9b9d29398f02ec3e22225f06f705e3fa8055370f94a4
 DIST c-ares-1.5.3.tar.gz 481810 RMD160 8f886748783d8d4ef97b494544cebd924730b695 SHA1 885fa291d7ae7d825c732b38ae147d5f83cc1904 SHA256 3037156096ea9fee7c40c771207ab8f21b862cb38b6ca62cc0ac464223f9b643
+DIST c-ares-1.6.0.tar.gz 448639 RMD160 3eccaad5df124525c70c47a76cc3fc2cbd31bbe8 SHA1 50b0f5955769117720c8ff2bde6a8a8ece65d7a3 SHA256 feb6abcac61556a07b26e11a8195b0b4f4926bd3bc9fb3dfb8ad451b9e2296e6
 EBUILD c-ares-1.4.0.ebuild 650 RMD160 3c3c8832065cfa59bd9669a5a0b3b9b1ff5fe0a4 SHA1 53e0e80be4a39247c371373e66b52ee58173cc81 SHA256 8000f86f14f89aec36f3a484fd479eba005f001116fc6bde6abfe332efc874d2
 EBUILD c-ares-1.5.1.ebuild 950 RMD160 5f4698eee573363648650346904f93bb483bab8d SHA1 00af7465eaddd71dff8f54e6a05a8131a7e78333 SHA256 dbb54fb50b1878c01d7ebcb322f359a472a6a5f09db34b85474704408644e3a4
 EBUILD c-ares-1.5.2.ebuild 1049 RMD160 ae919b909f4a0f0341996ed04007e70e82a6728e SHA1 3decd48f84b2041ba61c54b8cf200977ba102642 SHA256 8162ce9ac66ad0b581016ec9683a80783eb925bc6c3ace07ad3dd8c439935ae4
 EBUILD c-ares-1.5.3.ebuild 942 RMD160 7c01662327a7bc80332d08a16155dfa0d9a0ffb6 SHA1 81ac8657fe960088eca660f1bb9a8d79d113b2d8 SHA256 702fe3a00ecc94b6327d6084c3bd04b3580eb19cb3da1124dce8a02879b8d9f8
-MISC ChangeLog 5843 RMD160 ce55c53d7eed962201726164782592262d0b648f SHA1 19594b6b0eddfb2a9ca06577d8c5bc393abe6717 SHA256 99e12f4191bed40f779ed98a3330b9a2278758c2516be51586e4ad5c7e6a13a5
+EBUILD c-ares-1.6.0.ebuild 663 RMD160 fceae60990b25eeea80e22060ce97a36245cb9f4 SHA1 12b0cdb78f47851589c19205e2e854ad5f211449 SHA256 3486c573fbf5b277ec7f9f8a06c346652ba3b6531fab8db350cc3e238fa2aa52
+MISC ChangeLog 5956 RMD160 4085208cd27bc777b98b4813fd58e689d90f218a SHA1 50ef590f66ef8c8e2b8979066c4a82f51d5639e7 SHA256 b3dff3d510e9915b796f0e83749e7ea3c6dca9ebcd1ba9a17dc4273613fe8488
 MISC metadata.xml 403 RMD160 48afb924f8ddebfd4ea31a43eca3b277a30b62b6 SHA1 ec604212b5eb7dde6256c827184a228eaa8161d5 SHA256 148b8bb5514a7787fab372ad8a71c93c67db9ce84ed2aa5953691c2104ca788a
